[gd_scene format=3 uid="uid://ciwlj3vy1mslu"]

[ext_resource type="Theme" uid="uid://crj5egtiaymc1" path="res://addons/sh_utils/debug/debug_theme.tres" id="1_uyam7"]
[ext_resource type="Script" uid="uid://c7viasqphqug3" path="res://addons/sh_utils/debug/debug_overlay.gd" id="2_l7xgc"]

[node name="DebugOverlay" type="Control" unique_id=877863632]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uyam7")
script = ExtResource("2_l7xgc")

[node name="DebugPerformanceOverlay" type="MarginContainer" parent="." unique_id=121557348]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="TabContainer" type="TabContainer" parent="DebugPerformanceOverlay" unique_id=1599749497]
layout_mode = 2
tab_alignment = 2
current_tab = 0
clip_tabs = false
all_tabs_in_front = true
tab_0/title = "1"
tab_1/title = "2"
tab_2/title = "3"
tab_3/title = "4"
tab_4/title = "5"

[node name="PerformanceLabel" type="Label" parent="DebugPerformanceOverlay/TabContainer" unique_id=1007195614]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "PerfMonitor"
horizontal_alignment = 2
metadata/_tab_index = 0
metadata/_tab_name = "1"

[node name="SysInfoLabel" type="Label" parent="DebugPerformanceOverlay/TabContainer" unique_id=1041237422]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "SysInfo"
horizontal_alignment = 2
metadata/_tab_index = 1
metadata/_tab_name = "2"

[node name="ConfigLabel" type="Label" parent="DebugPerformanceOverlay/TabContainer" unique_id=1715647463]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "QuckActions"
horizontal_alignment = 2
metadata/_tab_index = 2
metadata/_tab_name = "3"

[node name="TargetInspectorLabel" type="Label" parent="DebugPerformanceOverlay/TabContainer" unique_id=1604565864]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "TargetInspector"
horizontal_alignment = 2
metadata/_tab_index = 3
metadata/_tab_name = "4"

[node name="SceneSwitchLabel" type="Label" parent="DebugPerformanceOverlay/TabContainer" unique_id=376683061]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "SceneSwitch"
horizontal_alignment = 2
metadata/_tab_index = 4
metadata/_tab_name = "5"
